--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-ul{
+    background-color: aqua;
+    text-decoration: none;
+    display: flex;  
+}
+.nav-right{
+    justify-content: right; 
+}
+.nav-ul li{
+   padding: 15px;
+   list-style: none;
+   cursor: pointer;
+   
+}
+.nav-link{
+    text-decoration: none;
+    color: #000;
+}
+.footer{
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    justify-content: center;
+    background-color: aqua;
+    align-items: center;
+    text-align: center;
+    padding: 10px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+/* form */
+.form{
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    /* background-color: aqua; */
+    padding: 10px;
+}
+.form-box{
+    display: block;
+    /* background-color: #000; */
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.input-form-box{
+    display: block;
+    margin: 10px 0;
+    font-size: 20px;
+    border: 2px solid skyblue;
+    padding: 8px 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.signup-btn{
+    padding: 10px 15px;
+    background-color: rgb(25, 182, 244);
+    color: whitesmoke;
+    align-items: center;
+    margin-top: 20px;
+    justify-content: center;
+    cursor: pointer;
+    border: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.login-btn {
+    padding: 10px 15px;
+    background-color: rgb(25, 182, 244);
+    color: whitesmoke;
+    align-items: center;
+    margin-top: 20px;
+    justify-content: center;
+    cursor: pointer;
+    border: 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Productlist{
+    text-align: center;
+    margin-top: 10px;
+    padding: 5px;
+}
+.product-list-item{
+    display: inline-block;
+    border: 1px solid blue;
+    padding: 5px;
+    height: 3vh;
+    width: 10%;
+    
 }
